# ISP_Simulation_Pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.vs.json
include/: demosaic.hpp  imageio.hpp
modules/: demosaic.cpp  imageio.cpp
src/: main.cpp
tests/: test_demosaic.cpp
